--- a/index.html
+++ b/index.html
@@ -17,15 +17,41 @@
            <button id="jsSave">저장</button>
        </div>
        <div class="controls__colors" id=jsColors>
-           <div class="controls__colors" style="background-color: #2c2c2c;"></div>
-           <div class="controls__colors" style="background-color: white;"></div>
-           <div class="controls__colors" style="background-color: #ff3b30;"></div>
-           <div class="controls__colors" style="background-color: #ff9500;"></div>
-           <div class="controls__colors" style="background-color: #ffcc00;"></div>
-           <div class="controls__colors" style="background-color: #4cd963;"></div>
-           <div class="controls__colors" style="background-color: #5ac8fa;"></div>
-           <div class="controls__colors" style="background-color: #0579ff;"></div>
-           <div class="controls__colors" style="background-color: #ef7aff;"></div>
+           <div class="controls__color jsColor" 
+           style="background-color: #2c2c2c;"
+           ></div>
+           <div
+            class="controls__color jsColor"
+            style="background-color: white;"
+            ></div>
+           <div 
+           class="controls__color jsColor" 
+           style="background-color: #ff3b30;"
+           ></div>
+           <div
+            class="controls__color jsColor"
+             style="background-color: #ff9500;"
+             ></div>
+           <div
+            class="controls__color jsColor" 
+            style="background-color: #ffcc00;"
+            ></div>
+           <div
+            class="controls__color jsColor"
+             style="background-color: #4cd963;"
+             ></div>
+           <div
+            class="controls__color jsColor"
+             style="background-color: #5ac8fa;"
+             ></div>
+           <div 
+           class="controls__color jsColor"
+            style="background-color: #0579ff;"
+            ></div>
+           <div
+            class="controls__color jsColor"
+             style="background-color: #ef7aff;"
+             ></div>
         </div> 
     </div>
     <script src="app.js"></script>
