리셋 기능 구현

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         </div>
         <div class = "controls__btns">
            <button id="jsMode">채우기</button>
-           <button id="jsSave">저장</button>
+           <button id ="jsClear">리셋</button> 
+           <button id="jsSave">저장</button>  
        </div>
        <div class="controls__colors" id=jsColors>
            <div class="controls__color jsColor" 
