--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
         <div class="controls__range">
             <input type="range"  id="jsRange" min="0.1" max="7.0" value="3.5" step="0.1">
         </div>
+        <div class="img_upload">
+            <input type="file" id="real-input" class="input-btn" accept="img/*" >
+         </div>
         <div class = "controls__btns">
            <button id="jsMode">채우기</button>
-           <button id ="jsClear">리셋</button> 
+           <button id ="jsClear">리셋</button>
            <button id="jsSave">저장</button>  
-       </div>
+        </div>
        <div class="controls__colors" id=jsColors>
            <div class="controls__color jsColor" 
            style="background-color: #2c2c2c;"
